Fix horizontal scroller title

--- a/src/components/horizontalMovieScroller/horizontalMovieScroller.module.scss
+++ b/src/components/horizontalMovieScroller/horizontalMovieScroller.module.scss
@@ -29,6 +29,8 @@
 
 .title > span {
   margin-bottom: 0.7em;
+  font-size: 1.4vw;
+  color: $whiteGray;
 }
 
 .scroller {
